--- a/foundations/intro-to-css/04-chaining-selectors/style.css
+++ b/foundations/intro-to-css/04-chaining-selectors/style.css
@@ -1,1 +1,10 @@
 /* Add CSS Styling */
+.avatar.proportioned{
+    width: 300px;
+    aspect-ratio:  1 / 1; /*retains its original square proportions*/
+}
+
+.avatar.distorted{
+    width: 200px;
+    height: 400px;
+}
